# sc2reader

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTORS  CONTRIBUTORS.txt  LICENSE  LICENSE.txt  MANIFEST.in  README.rst  README.txt  STYLE_GUIDE.rst  circle.yml  circle.yml_old_v1  extract.py  game_events_debug.py  generate_abilities.py  generate_build_data.py  new_units.py  profile.php  profile.py  protoss.py  pyproject.toml  replay.py  requirements.txt  ruff.toml  runner.py  sc2dump.cpp  setup.py  shell.py  structure.rst  terran.py  try_download.py  zerg.py
.circleci/: config.yml
data/: __init__.py
docs/: Makefile  make.bat
docs/source/: conf.py  dataobjects.rst  debug.rst  decoders.rst  factories.rst  faq.rst  index.old  index.rst  listeners.rst  mainobjects.rst  mainstructures.rst  plugins.rst  processors.rst  sc2reader.rst  structures.rst  supportobjects.rst  supportstructures.rst  usage.rst  utilities.rst  utilityclasses.rst
examples/: sc2autosave.py  sc2store.py
mpyq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
objects/: event.py  events.py  message.py  replay.py
parsers/: attributeParsers.py  detailParsers.py  eventParsers.py  messageParsers.py  parserLookup.py
sc2reader/: __init__.py  config.py  constants.py  data.py  decoders.py  eventparsers.py  events.py  exceptions.py  factories.py  log_utils.py  objects.py  parsers.py  processors.py  readers.py  replay.py  replaybuffer.py  resources.py  sc2reader.py  utils.py
sc2reader/data/: 16117_abilities.csv  16117_units.csv  16939_abilities.csv  16939_units.csv  17811_abilities.csv  17811_units.csv  18701_abilities.csv  18701_units.csv  21029_abilities.csv  21029_units.csv  22612_abilities.csv  22612_units.csv  HOWTO  HOWTO.md  __init__.py  ability_lookup.csv  base.py  (+17 more)
scripts/: sc2printer
test_replays/: event_order.SC2Replay  test_all.py  test_replays.py
test_s2gs/: hots1.s2gs  hots2.s2gs  lotv.s2gs  s2gs1.s2gs  summary.s2gs  test_all.py  test_all_s2gs.py
tests/: tests.py
utils/: abilities.py  units.py
(+454 files in other folders)
